# 2025E-420-920-MA-Thread

./: README.md  pyproject.toml
src/myapp/: __init__.py  app.py  main.py  tasks.py
