[project]
name = "myapp"
version = "0.1.0"
description = "Projet pour mettre en pratique les threads en Python."
readme = "README.md"
authors = [
    { name = "Vincent Archambault-Bouffard", email = "varchambaultbouffard@cmaisonneuve.qc.ca" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
main = "myapp:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
